Test/typing/should_fail/duplicate_modifiers_class.java
package toto;

public static static class A {}